@@ -8,10 +8,11 @@ filename                                  pass  todo-fail  fail
 anchor.json                                  2          0     0
 badRef.json                                  3          0     0
 faux-buggy-schemas.json                      2          0     0
+format-date.json                             1          0     0
 format-duration.json                         9          0     0
-format-ipv4.json                             3          0     0
+format-ipv4.json                             4          0     0
 format-relative-json-pointer.json            7          0     0
-format-time.json                            11          0     0
+format-time.json                            13          0     0
 id.json                                      6          0     0
 keyword-independence.json                  812          0     0
 loose-types-const-enum.json                  8          0     0
@@ -23,4 +24,4 @@ unicode.json                                 9          0     0
 unknownKeyword.json                          4          0     0
 vocabulary.json                              1          0     0
 ---------------------------------------------------------------
-TOTAL                                      917          0     0
+TOTAL                                      921          0     0
