@@ -3,6 +3,7 @@ Revision history for JSON-Schema-Modern
 {{$NEXT}}
           - restore some optional modules used for format validation to the
             prereq list that were mistakenly dropped in version 0.515
+          - date-time, date and time formats no longer match non-ascii digits
 
 0.516     2021-08-14 19:53:16Z
           - fix email format tests on older prereqs
